--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,3 @@
-*.js linguist-language=HTML
-*.css linguist-language=HTML
+*.css linguist-language=CSS
 *.html linguist-language=HTML
-*.py linguist-language=HTML
+*.py linguist-language=Python/Django
