--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
-*.css linguist-language=CSS
-*.html linguist-language=HTML
-*.py linguist-language=Python/Django
+*.css linguist-language="CSS"
+*.html linguist-language="HTML"
+*.py linguist-language="Python/Django"
